<resources>
    <string name="app_name">Habits</string>
    <string name="submit">+</string>
    <string name="radioUseful">Полезная</string>
    <string name="radioAddiction">Вредная</string>
    <string name="textDescription">Описание</string>
    <string name="textTitle">Название</string>
    <string name="textPriority">Приоритет</string>
    <string name="textType">Тип</string>
    <string name="textCount">Количество</string>
    <string name="textFrequency">Частота</string>
    <string name="textCountHint">Количество дней</string>
    <string name="textFrequencyHint">Количество раз в день</string>
    <string name="btnCreate">Создать</string>
    <string name="homeNav">Домашняя страница</string>
    <string name="aboutNav">О приложении</string>
    <string name="aboutFragmentText">Приложение о привычках</string>
    <string name="countPostfix"> дней</string>
    <string name="frequencyPostfix"> раз в день</string>
    <string name="requiredField">обязательное поле</string>

    <string name="priority_prompt">Выберите приоритет</string>
    <string-array name="priorities">
        <item>Низкий</item>
        <item>Высокий</item>
    </string-array>
    <string-array name="sortTypes">
        <item>по названию</item>
        <item>по описанию</item>
    </string-array>
    <string-array name="screen_array">
        <item>Screen 1</item>
        <item>Screen 2</item>
    </string-array>

    <plurals name="countPlurals">
        <item quantity="zero">%1$d дней</item>
        <item quantity="one">%1$d день</item>
        <item quantity="two">%1$d дня</item>
        <item quantity="few">%1$d дня</item>
        <item quantity="many">%1$d дней</item>
        <item quantity="other">%1$d дней</item>
    </plurals>

    <plurals name="frequencyPlurals">
        <item quantity="zero">%1$d раз в день</item>
        <item quantity="one">%1$d раз в день</item>
        <item quantity="two">%1$d раза в день</item>
        <item quantity="few">%1$d раза в день</item>
        <item quantity="many">%1$d раз в день</item>
        <item quantity="other">%1$d раз в день</item>
    </plurals>
</resources>
